# simplebroker

./: .codecov.yml  .envrc  .gitignore  <simplebroker.db.BrokerCore object at 0x107b73950>  <simplebroker.db.BrokerCore object at 0x1096f82f0>  AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  counter_implementation_plan.md  coverage.xml  pyproject.toml
.code/users/: user-message-3-0326f53d-54b9-4213-b9f9-b3da59bb6ada.txt
.github/: dependabot.yml
.github/scripts/: combine_coverage.py  normalize_scorecard_sarif.jq  release_publication.py  require_green_workflows.py
.github/workflows/: codeql.yml  dependabot.yml  fuzz.yml  release-gate-pg.yml  release-gate-redis.yml  release-gate.yml  release-simplebroker-pg.yml  release-simplebroker-redis.yml  release-simplebroker.yml  release.yml  scorecard.yml  test-pg-extension.yml  test-redis-extension.yml  test.yml
docs/: README.md  coalescing.md  lessons.md
docs/agent-context/: README.md  context.index.yaml  engineering-principles.md  principles.md
docs/implementation/: 00-implementation-index.md  01-documentation-system.md  02-repository-map.md  03-agent-inventory.md
docs/plans/: 2026-04-02-env-var-backend-selection.md  2026-05-04-process-local-broker-session-plan.md  2026-05-05-multi-queue-activity-waiter-api.md  2026-05-05-pg-watcher-followup-review-remediation-plan.md  2026-05-05-review-findings-remediation-plan.md  2026-05-05-shared-pg-watcher-review-remediation-plan.md  2026-05-11-sqlite-cross-thread-close-hardening-plan.md  2026-05-13-before-filter-read-peek-move-plan.md  2026-05-13-targeted-queue-metadata-api-plan.md  2026-05-14-phaselock-windows-setup-contention-hardening-plan.md  2026-05-14-simplebroker-redis-connection-pool-plan.md  2026-05-14-simplebroker-redis-plan.md  2026-05-14-simplebroker-redis-second-backend-plan.md  2026-05-17-physical-delete-and-batch-delete-plan.md  2026-05-20-delete-from-queues-plan.md  2026-05-20-list-queues-names-only-plan.md  2026-05-20-message-body-search-api-plan.md  2026-05-20-phaselock-atomic-status-file-plan.md  2026-05-20-phaselock-single-fallback-status-cursor-plan.md  2026-05-28-setup-forward-progress-budget-plan.md  2026-05-30-drop-python-310-plan.md  2026-06-01-exact-message-import-api-plan.md  2026-06-10-sidecar-sessions-and-public-watcher-surface-plan.md  2026-06-11-dump-load-plan.md  2026-06-11-hypothesis-property-testing-findings.md  2026-06-11-hypothesis-property-testing-plan.md  2026-06-18-latest-pending-timestamp-api-plan.md  2026-06-18-queue-rename-api-plan.md  2026-07-02-evaluation-fixes-plan.md  2026-07-02-message-id-validation-and-diagnostics-plan.md  2026-07-05-independent-review-fixes-plan.md  (+25 more)
examples/: ASYNC_README.md  MULTI_QUEUE_README.md  README.md  async_pooled_broker.py  async_simple_example.py  async_wrapper.py  benchmark.py  dead_letter_queue.sh  example_extension_implementation.md  logging_runner.py  multi_queue_patterns.py  multi_queue_watcher.py  python_api.py  queue_migration.sh  reference_reactor.py  resilient_worker.sh  simple_watcher_example.py  sqlite_connect.py  test_sqlite_connect.py  work_stealing.sh
extensions/simplebroker_pg/: LICENSE  README.md  pyproject.toml
extensions/simplebroker_pg/simplebroker_pg/: __init__.py  _constants.py  _identifiers.py  _sql.py  plugin.py  runner.py  schema.py  validation.py
extensions/simplebroker_pg/tests/: conftest.py  test_error_translation.py  test_pg_broadcast_semantics.py  test_pg_cross_thread_generator_probe.py  test_pg_dump_load_pipe.py  test_pg_fifo_semantics.py  test_pg_include_claimed.py  test_pg_init_backend.py  test_pg_integration.py  test_pg_latest_pending_timestamp.py  test_pg_maintenance.py  test_pg_notify.py  test_pg_ownership.py  test_pg_plugin_contract_edges.py  test_pg_queue_metadata.py  test_pg_queue_rename.py  test_pg_runner_lifecycle.py  test_pg_schema_validation_paths.py  test_pg_search.py  test_pg_sidecar.py
extensions/simplebroker_redis/: README.md  pyproject.toml
extensions/simplebroker_redis/simplebroker_redis/: __init__.py  _constants.py  core.py  keys.py  plugin.py  pool.py  responses.py  runner.py  scripts.py  validation.py
extensions/simplebroker_redis/tests/: conftest.py  test_redis_atomicity.py  test_redis_batches.py  test_redis_core_behaviors.py  test_redis_cross_thread_generator_probe.py  test_redis_dump_load_pipe.py  test_redis_include_claimed.py  test_redis_integration.py  test_redis_keys.py  test_redis_latest_pending_timestamp.py  test_redis_plugin_contract_edges.py  test_redis_plugin_validation_paths.py  test_redis_pool.py  test_redis_queue_rename.py  test_redis_sidecar.py  test_redis_validation.py
fuzz/: fuzz_dump_load.py  fuzz_timestamp_validate.py
simplebroker/: __init__.py  __main__.py  _backend_plugins.py  _broker_session.py  _constants.py  _delivery.py  _dump.py  _exceptions.py  _maintenance.py  _message_id.py  _message_import.py  _message_insert.py  _message_search.py  _phaselock.py  _project_config.py  _runner.py  _runner_lifecycle.py  _scripts.py  _sidecar.py  _sql.py  _targets.py  _timestamp.py  cli.py  commands.py  db.py  ext.py  helpers.py  metadata.py  project.py  queue.py  sbqueue.py  watcher.py
tests/: __init__.py  backend_benchmark.py  conftest.py  coverage_subprocess.py  performance_calibration.py  test_absolute_path.py  test_activity_waiter_api.py  test_activity_waiter_replacement.py  test_after_flag.py  test_alias_cli.py  test_aliases_db.py  test_backend_benchmark_smoke.py  test_backend_plugin_resolution.py  test_batch_delete.py  test_batch_delete_sqlite.py  test_batch_operations.py  test_before_flag.py  test_broadcast.py  test_broadcast_integration.py  test_broker_factory.py  test_bump_uv.py  test_cleanup.py  test_cli_argument_parsing.py  test_cli_broken_pipe.py  test_cli_dump_load.py  test_cli_edge_cases.py  test_cli_global_options.py  test_cli_main.py  test_cli_metadata.py  test_cli_move.py  test_cli_peek_include_claimed.py  test_cli_queue_metadata.py  test_cli_rearrange_args.py  test_cli_rename.py  test_cli_validation.py  test_cli_watch.py  test_cli_write_output.py  test_commands_helpers.py  test_commands_init.py  test_commands_status.py  (+119 more)
(+98 files in other folders)
