[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simplebroker"
version = "3.1.9"
description = "A lightweight message queue backed by SQLite"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Van Lindberg", email = "van.lindberg@gmail.com"},
]
keywords = ["message-queue", "sqlite", "cli", "queue", "broker"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "mypy>=1.0",
    "psycopg[binary]>=3,<4",
    "psycopg-pool>=3.1,<4",
    "ruff>=0.1.0",
    "pytest-timeout>=2.4.0",
]
pg = [
    "simplebroker-pg>=1.0.6,<2",
]

[project.scripts]
broker = "simplebroker.cli:main"
simplebroker = "simplebroker.cli:main"

[project.urls]
Homepage = "https://github.com/VanL/simplebroker"
Documentation = "https://github.com/VanL/simplebroker#readme"
Repository = "https://github.com/VanL/simplebroker.git"
Issues = "https://github.com/VanL/simplebroker/issues"

[tool.uv.sources]
simplebroker-pg = { path = "./extensions/simplebroker_pg", editable = true }

[tool.hatch.build]
include = [
    "simplebroker/**/*.py",
    "simplebroker/py.typed",
    "README.md",
    "LICENSE",
]
exclude = [
    "tests/",
    "agent_history/",
    ".*",
    "*.db",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers -m 'not slow' -n auto --dist loadgroup"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "shared: backend-agnostic black-box tests that should pass across supported backends",
    "sqlite_only: tests that validate built-in SQLite-specific behavior",
    "pg_only: tests that validate the Postgres extension package",
]

[tool.mypy]
python_version = "3.14"
no_namespace_packages = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
    "UP045", # Use X | None - not available until Python 3.10
    "UP006", # Use lowercase generics - not available until Python 3.9
]

[tool.ruff.lint.isort]
known-first-party = ["simplebroker"]

[tool.coverage.run]
source = ["simplebroker"]
parallel = true
concurrency = ["thread", "multiprocessing"]
omit = [
    "*/tests/*",
    "*/examples/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
]
show_missing = true
skip_empty = true

[tool.coverage.html]
directory = "htmlcov"
