[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simplebroker-pg"
version = "2.0.0"
description = "Postgres backend plugin for SimpleBroker"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
license-files = ["LICENSE"]
authors = [
    {name = "Van Lindberg", email = "van.lindberg@gmail.com"},
]
dependencies = [
    "simplebroker>=4.0.0",
    "psycopg[binary]>=3",
    "psycopg-pool>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.4.0",
]

[project.entry-points."simplebroker.backends"]
postgres = "simplebroker_pg.plugin:get_backend_plugin"

[tool.uv.sources]
simplebroker = { path = "../..", editable = true }

[tool.hatch.build]
include = [
    "/simplebroker_pg/**/*.py",
    "/simplebroker_pg/py.typed",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "pg_only: tests that validate the Postgres extension package",
]
