[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simplebroker-redis"
version = "2.3.0"
description = "Valkey/Redis backend extension for SimpleBroker"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
license-files = ["LICENSE"]
authors = [
    {name = "Van Lindberg", email = "van.lindberg@gmail.com"},
]
dependencies = [
    "simplebroker>=4.4.0",
    "redis>=5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.4.0",
]

[project.entry-points."simplebroker.backends"]
redis = "simplebroker_redis.plugin:get_backend_plugin"

[tool.uv.sources]
simplebroker = { path = "../..", editable = true }

[tool.hatch.build]
include = [
    "/simplebroker_redis/**/*.py",
    "/simplebroker_redis/py.typed",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "redis_only: tests that validate the Valkey/Redis extension package",
]
